--- a/src/pages/ContactForm.css
+++ b/src/pages/ContactForm.css
@@ -48,7 +48,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("/45-7.jpg");
+  background-image: url("45-7.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
